--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -232,8 +232,51 @@ header {
 
 
 
-
-
+#cursos {
+    padding: 50px 20px;
+    background-color: #000000;
+    text-align: center;
+}
+.curso-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.curso {
+    background-color: #c657e6;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    flex: 1 1 calc(50% - 20px); /* Ancho del 50%, con 20px de espacio entre cursos */
+}
+.curso h3 {
+    font-size: 1.2rem;
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+.curso p {
+    font-size: 1rem;
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+.button {
+    background-color: #ffffff;
+    color: #c657e6;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.button:hover {
+    background-color: #a03ca6;
+    color: white;
+    transition: 0.9s;
+}
 
 
 
@@ -299,7 +342,32 @@ footer a:hover {
 }
 /* Sector FOOTER */
 
-
+.chat-btn {
+    position: sticky;
+    bottom: 20px;
+    margin-left: 20px;
+    z-index: 1000;
+}
+.chat-btn a {
+    display: block;
+    width: 60px;
+    height: 60px;
+    background-color: #c657e6;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 60px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+.chat-btn a:hover {
+    background-color: #a03ca6;
+}
+.chat-btn img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-top: 10px;
+}
 
 
 
