--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -232,6 +232,16 @@ header {
 
 
 
+
+
+
+
+
+
+
+
+
+/* Sector CURSOS */
 #cursos {
     padding: 50px 20px;
     background-color: #000000;
@@ -250,7 +260,7 @@ header {
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
-    flex: 1 1 calc(50% - 20px); /* Ancho del 50%, con 20px de espacio entre cursos */
+    flex: 1 1 calc(50% - 20px);
 }
 .curso h3 {
     font-size: 1.2rem;
@@ -277,6 +287,144 @@ header {
     color: white;
     transition: 0.9s;
 }
+/* Sector CURSOS */
+
+
+
+.login-box {
+    width: 320px;
+    margin: 100px auto;
+    padding: 40px;
+    border: 5px solid #c657e6;
+    border-radius: 5px;
+    background-color: #000000;
+  }
+  
+  .login-box h1 {
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 20px;
+  }
+  
+  .input-group {
+    position: relative;
+    margin-bottom: 20px;
+  }
+  
+  .input-group label {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #666;
+  }
+  
+  .input-group input {
+    padding: 10px 40px 10px 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #333;
+  }
+  
+  .input-group button {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    color: #c657e6;
+  }
+  
+  .input-group button:hover {
+    color: white;
+  }
+  
+  .fa {
+    font-family: "Font Awesome 5 Free";
+    color: #c657e6;
+  }
+  
+  .fa-eye-slash:before {
+    content: "\f070";
+  }
+  
+  .fa-eye:before {
+    content: "\f06e";
+  }
+  .login-box input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    margin-left: 5px;
+    border: none;
+    border-radius: 20px;
+    background-color: #c657e6;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .login-box input[type="submit"]:hover {
+    background-color: white;
+    color: #c657e6;
+    transition: 0.9s;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .videos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .video {
+    margin: 20px;
+    width: 300px;
+  }
+  
+  .video h2 {
+    color: #333;
+    margin-bottom: 20px;
+  }
+  
+  video {
+    width: 100%;
+    height: auto;
+  }
+  .container-plataforma {
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .btn-chat {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #c657e6;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+
+  .btn-chat:hover {
+    background-color: white;
+    color: #c657e6;
+    transition: 0.9s;
+  }
 
 
 
