--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -412,8 +412,37 @@ video {
 }
 /* Sector VIDEOS */
 
-
-
+.steps {
+    max-width: 700px;
+    margin: 0 auto;
+    color: white;
+    padding: 0 20px;
+}
+.steps h1{
+    margin-bottom: 30px;
+}
+.step {
+    display: flex;
+    margin-bottom: 20px;
+    color: white;
+}
+.step-number {
+    flex: 0 0 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: #c657e6;
+}
+.step-description {
+    flex: 1;
+    padding-left: 20px;
+}
+.step-description h3 {
+    margin-top: 0;
+}
+.step-description p {
+    margin-top: 5px;
+}
 
 
 
